--- a/telegram_bot_simple_application.ipynb
+++ b/telegram_bot_simple_application.ipynb
@@ -176,7 +176,7 @@
       "source": [
         "import telebot\n",
         "\n",
-        "API_KEY = '8059916251:AAGtL_yz_JNHnb0lIgodZv1IVBS9CatAk0M'\n",
+        "API_KEY = '000000000000000000000000000000000000000'\n",
         "bot = telebot.TeleBot(API_KEY)"
       ],
       "metadata": {
